adding the 'percent' question option

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -47,7 +47,9 @@
             <button onclick="add(this)"> + </button><br/>
             Question type:
             <select id="qtype">
-              <option value="multiplechoice">multiple choice</option><option value="slider">slider</option>
+              <option value="multiplechoice">multiple choice</option>
+              <option value="slider">slider</option>
+              <option value="percent">percent</option>
             </select><br/>
             <button ng-click="createQuestion()">create</button>
             </li>
